

<RelativeLayout
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:padding="5dp"
 tools:context=".MainActivity">



<Button
 android:id="@+id/btnPause"
 android:layout_width="0dp"
 android:layout_height="wrap_content"
 android:onClick="onClick"
 android:text="@string/pause"
 android:textSize="12sp">
</Button>

<TextView
    android:id="@+id/music_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="55dp"
    android:text="@string/music_name" />

<TextView
    android:id="@+id/statusOfMusic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/music_name"
    android:layout_below="@+id/music_name"
    android:layout_marginTop="28dp"
    android:text="@string/status" />

<TextView
    android:id="@+id/currentVolume"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/seekBar"
    android:layout_centerHorizontal="true"
    android:text="@string/currentVolume" />

<Button
    android:id="@+id/btnPlay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="22dp"
    android:onClick="onClickStart"
    android:text="@string/play" />

<SeekBar
    android:id="@+id/seekBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/statusOfMusic"
    android:layout_below="@+id/statusOfMusic" />

</RelativeLayout>